# ProgMathsS3

./: .gitignore  CMakeLists.txt  README.md
libRatio/: CMakeLists.txt
lib_Ratio/: CMakeLists.txt
lib_Ratio/doc/: Doxyfile-html.cmake
lib_Ratio/include/: Ratio.hpp
lib_Ratio/src/: Ratio.cpp
my_examples/: CMakeLists.txt
my_examples/src/: main.cpp
test_units/: CMakeLists.txt
test_units/src/: test.cpp
